# yuumi_multibox

./: Cargo.toml
src/: communication.rs  log.rs  main.rs
src/features/: feature.rs  message.rs  mod.rs  skill_e.rs  skill_q.rs  skill_r.rs  skill_w.rs
src/features/skill_q/: mod.rs  mouse_move.rs  release_q.rs
