[package]
name = "yuumi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = "0.5.1"
enum-ordinalize = "3.1.10"
bytes = "1.1.0"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
local-ip-address = "0.4.4"